# libvideoio-go

./: .drone.yml  .gitignore  CMakeLists.txt  fips-include.cmake  fips.yml
include/libvideoio-go/: FrameSet.h  GoSource.h
lib/: CMakeLists.txt  FrameSet.cpp  GoSource.cpp
test/: CMakeLists.txt  test_data.h
test/unit/: CMakeLists.txt  GoSource_FrameSet_test.cpp  GoSource_MultiMov_test.cpp  test_test.cpp
tools/: CMakeLists.txt  Player.cpp
